# OpenPapyrus

./: .gitattributes  README.md
Src/OSF/CSOAP/wsdl2c/: CallFunc.c  CallFunc.h  CallList.c  CallList.h  CallVar.c  CallVar.h  Makefile.am  call.xsd  codewriter.c  codewriter.h  wsdl2c.c
Src/OSF/cyrus-sasl/: .travis.yml  CONTRIBUTING.md  Makefile.am  README.andrew  README.md  appveyor.yml  configure.ac  libsasl2.pc.in
Src/OSF/cyrus-sasl/common/: Makefile.am  crypto-compat.c  crypto-compat.h  plugin_common.c  plugin_common.h
Src/OSF/cyrus-sasl/config/: sasl.spec
Src/OSF/cyrus-sasl/contrib/: README  change-sasldb2-realm.py  cyrus-sasl-1.5.24-ltdl.patches  cyrus-sasl-2.1-upgrade.h  cyrus-sasl-libltdl  pwcheck-pam.patch  saslauthd-unix.pl  securid.patches  stripplus_canonuser.patch
Src/OSF/cyrus-sasl/contrib/tclsasl/: README  tclsasl.patch
Src/OSF/cyrus-sasl/doc/legacy/: Makefile.am  TODO  components.html  index.html  install.html  macosx.html  mechanisms.html  options.html  os390.html  readme.html  sysadmin.html
Src/OSF/cyrus-sasl/docsrc/: Makefile  conf.py  developer.rst  download.rst  getsasl.rst  index.rst  operations.rst  packager.rst  setup.rst  support.rst
Src/OSF/cyrus-sasl/docsrc/_static/: cyrus.css
Src/OSF/cyrus-sasl/docsrc/_templates/: layout.html
Src/OSF/cyrus-sasl/docsrc/sasl/: advanced.rst  appconvert.rst  authentication_mechanisms.rst  components.rst  concepts.rst  gssapi.rst  installation.rst  macosx.rst  manpages.rst  options.rst  os390.rst  quickstart.rst  resources.rst  sysadmin.rst  upgrading.rst  windows.rst
Src/OSF/cyrus-sasl/include/: Makefile.am  gai.h  hmac-md5.h  makemd5.c  md5.h  prop.h  sasl.h  saslplug.h  saslutil.h
Src/OSF/cyrus-sasl/lib/: Makefile.am  NTMakefile  auxprop.c  canonusr.c  checkpw.c  client.c  common.c  config.c  dlopen.c  external.c  getaddrinfo.c  getnameinfo.c  getsubopt.c  md5.c  sasl-internal.h  sasl-pch.cpp  saslint.h  saslutil.c  server.c  seterror.c  snprintf.c  staticopen.h  windlopen.c
Src/OSF/cyrus-sasl/m4/: bsd_sockets.m4  kerberos_v4.m4  openssl.m4  sasl2.m4  sasldb.m4
Src/OSF/cyrus-sasl/mac/krb4_sources/: lsb_addr_comp.c
Src/OSF/cyrus-sasl/man/legacy/: sasl_server_start.3
Src/OSF/cyrus-sasl/plugins/: Makefile.am  NTMakefile  anonymous.c  anonymous_init.c  cram.c  crammd5_init.c  digestmd5.c  digestmd5_init.c  gs2.c  gs2_init.c  gs2_token.c  gssapi.c  gssapiv2_init.c  kerberos4.c  kerberos4_init.c  ldapdb.c  ldapdb_init.c  login.c  login_init.c  makeinit.sh  ntlm.c  ntlm_init.c  otp.c  otp_init.c  passdss.c  passdss_init.c  plain.c  plain_init.c  sasldb.c  sasldb_init.c  scram.c  scram_init.c  securid.c  sql.c  sql_init.c  srp.c  srp_init.c
Src/OSF/cyrus-sasl/pwcheck/: Makefile.am  pwcheck.c  pwcheck_getpwnam.c  pwcheck_getspnam.c
Src/OSF/cyrus-sasl/sample/: Makefile.am  client.c  common.c  common.h  http_digest_client.c  sample-client.c  sample-server.c  server.c
Src/OSF/cyrus-sasl/saslauthd/: Makefile.am  README.cache  README.ipc  auth_dce.c  auth_dce.h  auth_getpwent.c  auth_getpwent.h  auth_httpform.c  auth_httpform.h  auth_krb4.c  auth_krb4.h  auth_krb5.c  auth_krb5.h  auth_ldap.c  auth_ldap.h  auth_pam.c  auth_pam.h  auth_rimap.c  auth_rimap.h  auth_sasldb.c  auth_sasldb.h  auth_shadow.c  auth_shadow.h  auth_sia.c  auth_sia.h  cache.c  cache.h  cfile.c  cfile.h  getaddrinfo.c  getnameinfo.c  ipc_doors.c  ipc_unix.c  krbtf.c  lak.c  mechanisms.c  mechanisms.h  saslauthd-main.c  saslauthd-main.h  saslcache.c  (+2 more)
Src/OSF/cyrus-sasl/saslauthd/include/: gai.h
Src/OSF/cyrus-sasl/sasldb/: Makefile.am  NTMakefile  allockey.c  db_berkeley.c  db_gdbm.c  db_lmdb.c  db_ndbm.c  db_none.c  sasldb.h
Src/OSF/cyrus-sasl/tests/: Makefile.am  runtests.py  t_common.c  t_common.h  t_gssapi_cli.c  t_gssapi_srv.c
Src/OSF/cyrus-sasl/utils/: Makefile.am  dbconverter-2.c  pluginviewer.8  pluginviewer.c  sasldbconverter2.8  sasldblistusers.c  saslpasswd.c  saslpasswd2.8  sasltestsuite.8  sfsasl.c  sfsasl.h  smtptest.c  testsuite.c
Src/OSF/cyrus-sasl/win32/: README.md  generate_conan.cmd  init_auxprop.c  init_mechanism.c
Src/OSF/cyrus-sasl/win32/conan/: build.py
Src/OSF/cyrus-sasl/win32/include/: NTMakefile  config.h
Src/ucl-1.03/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.hin  configure  configure.ac
Src/ucl-1.03/B/: 00README.TXT  clean.bat  done.bat  prepare.bat  src.rsp
Src/ucl-1.03/B/dos16/: bc.bat  bc.rsp  bc_286.bat  bc_pp.bat  dm.bat  mc.bat  mc_qc.bat  qc.bat  tc.bat  vc.bat  vc_qc.bat  wc.bat  wc.rsp
Src/ucl-1.03/B/dos32/: bc_pp.bat  dj2.bat  dm.bat  emx.bat  highc.bat  highc.rsp  ndp.bat  ndp.rsp  wc.bat  zc.bat
Src/ucl-1.03/B/generic/: build.sh  build_gcc.sh
Src/ucl-1.03/B/os2/: emx.bat  wc.bat  zc.bat
Src/ucl-1.03/B/os2_16/: mc.bat  wc.bat
Src/ucl-1.03/B/win16/: bc.bat  mc.bat  vc.bat  wc.bat
Src/ucl-1.03/B/win32/: bc.bat  bc.rsp  cygwin.bat  cygwin.rsp  dm.bat  ic.bat  lcc.bat  mingw.bat  mwerks.bat  pgi.bat  pw32.bat  rsxnt.bat  vc.bat  vc.rsp  vc_dll.bat  vc_dll.def  wc.bat  wc.rsp
Src/ucl-1.03/B/win64/: ic.bat  ic_dll.bat  vc.bat  vc.rsp  vc_dll.bat  vc_dll.def
Src/ucl-1.03/acc/: acc_arch.h  acc_auto.h  acc_incd.h
Src/ucl-1.03/acconfig/: ltmain.sh  shtool
Src/ucl-1.03/asm/i086/src/: conf.ash  cpuid.asm  rdtsc.asm  rdtsca.asm
Src/ucl-1.03/asm/i086/src_nasm/: asminit.def  cpuid.asm  rdtsc.asm  rdtsca.asm
Src/ucl-1.03/asm/i386/: 00README.ASM
Src/ucl-1.03/examples/: Makefile.am  Makefile.in  portab.h  simple.c  uclpack.c
Src/ucl-1.03/include/: Makefile.am  Makefile.in
Src/ucl-1.03/include/ucl/: Makefile.am  Makefile.in  ucl.h  uclconf.h
Src/ucl-1.03/src/: Makefile.am  Makefile.in  alloc.c  getbit.h  n2_99.ch  n2b_99.c  n2b_d.c  n2b_to.c  n2d_d.c  n2d_to.c  n2e_to.c  sucl.c  ucl_conf.h  ucl_crc.c  ucl_dll.ch  ucl_init.c  ucl_mchw.ch  ucl_ptr.c  ucl_ptr.h  ucl_str.c  ucl_swd.ch  ucl_util.c
Src/ucl-1.03/upx/: 00README.UPX
Src/ucl-1.03/upx/i386/: n2b_d16.ash  n2b_d32.ash  n2b_d8e.ash  n2d_d32.ash  n2d_d8e.ash  n2e_d32.ash  n2e_d8e.ash
Src/ucl-1.03/upx/m68k/: bits.ash  n2b_d.ash  n2d_d.ash  n2e_d.ash
(+27296 files in other folders)
